%%   }
%%   \subsection{Installation}{
%%     \itemize{
%%       \item .
%%     }
%%   }
%%   \subsection{Documentation}{
%%     \itemize{
%%       \item .
%%     }
%%   }
%%   \subsection{Internals}{
%%     \itemize{
%%       \item .
%%     }
%%   }
%% }

\name{NEWS}
\title{News for \R{} Package \pkg{fastbeta}}
\newcommand{\GH}{\href{https://github.com/davidearn/fastbeta/issues/#1}{GH##1}}

\section{Changes in version 0.3.2 (2025-02-08)}{
  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item .
    }
  }
  \subsection{Deprecated and Defunct}{
    \itemize{
      \item .
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item .
    }
  }
  \subsection{New Features}{
    \itemize{
      \item Function \code{seir.canonical} providing a nondimensional
      interface to a special case (constant transmission, without vital
      dynamics, without loss of immunity) of \code{seir} usage.  The
      nondimensional parameters are the basic reproduction number and
      the ratio of the mean latent period and mean generation interval.
    }
  }
  \subsection{Installation}{
    \itemize{
      \item .
    }
  }
  \subsection{Documentation}{
    \itemize{
      \item .
    }
  }
  \subsection{Internals}{
    \itemize{
      \item .
    }
  }
}

\section{Changes in version 0.3.1 (2024-11-22)}{
  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item Formal argument \code{init} of \code{fastbeta},
      \code{fastbeta.bootstrap}, \code{ptpi}, and \code{seir} is
      repositioned.

      \item Formal arguments \code{sigma} and \code{m} of
      \code{fastbeta}, \code{fastbeta.bootstrap}, \code{ptpi}, and
      \code{seir} have constant default values (\code{sigma = 1},
      \code{m = 1L}) not depending on the values of other arguments.
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item Entry \code{[2, 2]} of the Jacobian matrix constructed by
      \code{seir(stochastic = FALSE, useCompiled = FALSE)} was wrong.
