@@ -1,5 +1,6 @@
 \name{seir.canonical}
 \alias{seir.canonical}
+\alias{summary.seir.canonical}
 \title{Solve the Canonical SEIR Equations}
 \description{
 Numerically integrates the canonical SEIR equations, a special case of
@@ -13,6 +14,8 @@ seir.canonical(from = 0, to = from + 1, by = 1,
                init = c(1 - p, p), p = .Machine[["double.neg.eps"]],
                weights = rep(c(1, 0), c(1L, m + n - 1L)),
                root = c("none", "peak"), \dots)
+
+\method{summary}{seir.canonical}(object, tol = 1e-6, \dots)
 }
 \arguments{
 \item{from, to, by}{
@@ -23,7 +26,7 @@ seir.canonical(from = 0, to = from + 1, by = 1,
   a positive number giving the basic reproduction number.}
 \item{ell}{
   a number in \eqn{(0,1)} giving the ratio of the mean latent period and
-  mean generation interval when \code{m} is nonzero.  The default value
+  mean generation interval when \code{m} is positive.  The default value
   implies that the mean latent period and mean infectious period are
   equal.}
 \item{m}{
@@ -44,17 +47,46 @@ seir.canonical(from = 0, to = from + 1, by = 1,
 \item{root}{
   a character string determining what is returned.  \code{"none"}: the
   numerical solution as a multiple time series object.  \code{"peak"}:
-  the time in units of the generation interval at which \eqn{Y} attains
-  a local maximum, \code{NaN} if \eqn{Y'} has no root between
-  \code{from} and \code{to}.}
+  information about the time and state when \eqn{Y} attains a local
+  maximum.}
 \item{\dots}{
   optional arguments passed to \code{\link[deSolve]{lsoda}}.}
+\item{object}{
+  an \R{} object inheriting from class \code{seir.canonical}, typically
+  the value of a call to \code{seir.canonical}.}
+\item{tol}{
+  a positive number giving an upper bound on the relative change (from
+  one time point to the next) in the slope of log prevalence, defining
+  time windows in which growth or decay of prevalence is considered to
+  be exponential.}
 }
 \value{
-A \dQuote{multiple time series} object, inheriting from class
+If \code{root = "none"},
+a \dQuote{multiple time series} object, inheriting from class
+\code{seir.canonical} and transitively from class
 \code{\link[=ts]{mts}}.  Beneath the class, it is a
-\code{length(seq(from, to, by))}-by-\code{(1+m+n+1)} numeric matrix
-with columns \code{S}, \code{E}, \code{I}, and \code{Y}.
+\code{length(seq(from, to, by))}-by-\code{(1+m+n+1)} numeric matrix with
+columns \code{S}, \code{E}, \code{I}, and \code{Y}.
+
+If \code{root = "peak"},
+a numeric vector of length 5 of the form \code{c(tau, S, E, I, Y)}
+containing the time in units of the generation interval at which \eqn{Y}
+attains a local maximum and the values at that time of \eqn{S},
+\eqn{\sum_{i} E^{i}}{sum(E)}, \eqn{\sum_{j} I^{j}}{sum(I)}, and \eqn{Y}.
+Attributes \code{E.full}, \code{I.full}, and \code{curvature} store the
+corresponding values of \eqn{E^{i}}{E[i]}, \eqn{I^{j}}{I[j]}, and
+\eqn{Y''}.  If \eqn{Y} does not attain a local maximum between times
+\code{from} and \code{to}, then all of the elements are \code{NaN} and
+there are no attributes.  If \code{m} is zero, then the third element is
+\code{NaN} and there is no attribute \code{E.full}.
+
+The method for \code{\link{summary}} returns a numeric vector of length
+2 containing the left and right \dQuote{tail exponents}, defined as the
+asymptotic values of the slope of log prevalence.  \code{NaN} elements
+indicate that a tail exponent cannot be approximated from the prevalence
+time series represented by \code{object}, because the time window does
+not cover enough of the tail, where the meaning of \dQuote{enough} is
+set by \code{tol}.
 }
 \details{
 The general SEIR equations handled by \code{\link{seir}} are
